# pebview

./: .gitignore  README.md  composer.json  windows.php
.github/workflows/: build.yml  macos.yml
doc/Chinese/: Dialog.md  Introduction.md  Toast.md  Window.md
doc/English/: Dialog.md  Introduction.md  Toast.md  Window.md
include/: PebView.h  Toast.h
lib/macos/arm64/: PebView.dylib  Toast.dylib
lib/macos/x86_64/: PebView.dylib  Toast.dylib
lib/windows/: WinToast.h
source/: PebView.v  build.cmd  build.sh  linux.sh  macos.sh  pebview.cpp
source/dialog/: osdialog_gtk.c  osdialog_win.c
source/other/: other.c  other.h  other_win.c
source/seticon/: icon.h
source/toast/: CMakeLists.txt  toast.cpp  toast.h
source/toast/linux/: toast.c
source/toast/macos/: toast.mm
source/toast/windows/: CMakeLists.txt  wintoast_c.cpp  wintoast_c.h  wintoastlib.h
source/tray/: tray.c
source/webview/: webview.h
source/window/: window.h  window_gtk.c  window_mac.c  window_mac.m  window_win.c
src/: Base.php  Core.php  Dialog.php  DialogBtn.php  DialogLevel.php  FileAction.php  Help.php  Install.php  PebView.h  PebView.php  Plugin.php  Toast.php  Tray.php  Window.php  WindowHint.php
src/config/plugin/kingbes/pebview/: pebview.php  process.php
src/process/: PebView.php
test/: demo.php  min.php  theme.php  tray.php
